# smartmerge

./: .gitignore  HACKING.rst  Makefile  README.rst  TODO  disperse.conf  releaser.conf  setup.cfg  setup.py
.github/workflows/: pythonpackage.yml
smartmerge/: __init__.py  __main__.py
smartmerge/plugins/: __init__.py
smartmerge/plugins/changelog_merge/: __init__.py  changelog_merge.py
smartmerge/plugins/changelog_merge/tests/: __init__.py  test_changelog_merge.py
smartmerge/plugins/debian_changelog/: __init__.py
smartmerge/plugins/gnu_changelog/: __init__.py
smartmerge/plugins/gnu_changelog/tests/: __init__.py  test_changelog_merge.py
smartmerge/plugins/news/: __init__.py
smartmerge/plugins/news_merge/: __init__.py  news_merge.py  parser.py
smartmerge/plugins/news_merge/tests/: __init__.py  test_news_merge.py
smartmerge/plugins/po/: README  __init__.py
smartmerge/plugins/po/tests/: test_po_merge.py
smartmerge/plugins/po_merge/: __init__.py  po_merge.py
smartmerge/plugins/po_merge/tests/: __init__.py  test_po_merge.py
smartmerge/tests/: __init__.py
tests/: __init__.py
