[metadata]
name = smartmerge
description = Three way merge with domain specific knowledge
version = attr:smartmerge.__version__
maintainer = Breezy Developers
maintainer_email = team@breezy-vcs.org
license = GNU GPLv2 or later
url = https://www.breezy-vcs.org/
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Operating System :: POSIX
project_urls =
    Repository=https://github.com/jelmer/smartmerge

[options]
packages = smartmerge
install_requires = merge3
